--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: >
 # Your information
 email: cfbastarz@gmail.com
 author: Carlos Frederico Bastarz
-#avatar: "https://br.gravatar.com/craftmind"
+avatar: "cfbastarz2.png"
 profile: Meu site pessoal.
 #twitter_username: twitter_username
 github_username:  cfbastarz
