Modificando arquivo _config.yml e adiciondo avatar.

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: >
 # Your information
 email: cfbastarz@gmail.com
 author: Carlos Frederico Bastarz
-avatar: "cfbastarz2.png"
+avatar: "https://cfbastarz.github.io/assets/avatar.png"
 profile: Meu site pessoal.
 #twitter_username: twitter_username
 #github_username: cfbastarz
