--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
-title: cfbastarz
+title: cfbastarz.github.io
 url: "https://cfbastarz.github.io"    # the protocol and hostname of your site, eg. `http://laobubu.github.io`
 #baseurl: "/jekyll-theme-EasyBook" # the prefix of your site uri, eg. `"/jekyll-theme-EasyBook"` or empty string `""`
-#timezone: Asia/Chongqing
+timezone: America/Sao_Paulo
 description: >
-  Meu site pessoal.
+  Aqui escrevo sobre problemas binários em geral.
 
 # Your information
 email: cfbastarz@gmail.com
 author: Carlos Frederico Bastarz
 avatar: "https://cfbastarz.github.io/assets/avatar.png"
-profile: Meu site pessoal.
+profile: Are you challenging me?
 #twitter_username: twitter_username
 #github_username: cfbastarz
 profile_links:
