Atualizando _config.yml.

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: >
 email: cfbastarz@gmail.com
 author: Carlos Frederico Bastarz
 avatar: "https://cfbastarz.github.io/assets/avatar.png"
-profile: Are you challenging me?
+profile: Some binary problems.
 #twitter_username: twitter_username
 #github_username: cfbastarz
 profile_links:
