Atualizando arquivos docs/index.md, mkdocs.yml e docs/videos.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,7 @@ edit_uri: edit/master/docs/
 nav:
   - Home: index.md
   - 'Curriculum Vitae': cv.md
+  - Videos: videos.md
 
 # Configuration
 theme: 
