Atualizando arquivo mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ site_description: Since 1982
 
 # Repository
 repo_name: cfbastarz
-repo_url: https://github.com/cfbastarz
+repo_url: https://github.com/cfbastarz/cfbastarz.github.io
 edit_uri: edit/master/docs/
 
 # Page tree
