--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,5 +14,6 @@ jobs:
       - run: pip install mkdocs-material 
       - run: pip install mkdocs-video
       - run: pip install mkdocs-pdf-export-plugin
+      - run: pip install mkdocs-awesome-pages-plugin
       - run: pip install mkdocs-blog-plugin
       - run: mkdocs gh-deploy --force
