Enable mkdocs-matplotlib plugin

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,4 +16,5 @@ jobs:
       - run: pip install mkdocs-pdf-export-plugin
       - run: pip install mkdocs-awesome-pages-plugin
       - run: pip install mkdocs-blog-plugin
+      - run: pip install mkdocs-matplotlib
       - run: mkdocs gh-deploy --force
