--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,6 +54,6 @@ plugins:
   - search
   - awesome-pages
   - blog:
-      format: "[%y/%m/%d]"
+      format: "[%Y/%m/%d]"
       text-align: "left"
   - mkdocs_matplotlib
